--- a/index.html
+++ b/index.html
@@ -1,75 +1,308 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="2-css : " />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>2-css</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ArtKuz/2-css">View on GitHub</a>
-
-          <h1 id="project_title">2-css</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ArtKuz/2-css/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ArtKuz/2-css/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="2-css" class="anchor" href="#2-css"><span class="octicon octicon-link"></span></a>2-css</h1>
-
-<p>Второе домашнее задание по курсу ШРИ, по лекции CSS.</p>
-
-<h2>
-<a name="%D0%9E%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5" class="anchor" href="#%D0%9E%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5"><span class="octicon octicon-link"></span></a>Описание</h2>
-
-<p>Вам необходимо сверстать табло вылета/прилета аэропорта Яндекс. В качестве примера исходных данных вы можете взять <a href="http://www.domodedovo.ru/ru/main/airindicator/flightnew/">табло аэропорта Домодедово</a>. Информация, которую необходимо разместить в табло следующая: название авиакомпании, логотип авиакомпании, номер рейса, модель самолёта, пункт назначения, плановое время вылета, фактическое время вылета, статус рейса. Оформление таблицы оставляем на ваш вкус, а дополнительным бонусом будет реализация без использования классов и JavaScript'а</p>
-
-<h3>
-<a name="%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-1" class="anchor" href="#%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-1"><span class="octicon octicon-link"></span></a>Задание №1</h3>
-
-<p>Реализовать разметку «зеброй», т.е нечетные строки должны быть выделены цветом фона отличным от цвета фона четных строк. 
-Предложите все возможные варианты реализации данной задачи.</p>
-
-<h3>
-<a name="%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-2" class="anchor" href="#%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-2"><span class="octicon octicon-link"></span></a>Задание №2</h3>
-
-<p>Реализовать разметку «крестом», когда визуально отделяются не только нечетные строки, но и нечетные столбцы.</p>
-
-<h3>
-<a name="%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-3" class="anchor" href="#%D0%97%D0%B0%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-3"><span class="octicon octicon-link"></span></a>Задание №3</h3>
-
-<p>Реализуйте подсветку «крестом», когда по наведению курсором на определённую ячейку соответствующие столбец и строчка подсвечиваются одним цветом.</p>
-
-<p><a href="http://artkuz.github.io/2-css/">artkuz.github.io/2-css/</a></p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">2-css maintained by <a href="https://github.com/ArtKuz">ArtKuz</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Табло вылета/прилета аэропорта Яндекс | 2-css | Кузвесов Артём</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <!--[if lt IE 9]>
+            <script src="js/css3-mediaqueries.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <h1>Табло вылета/прилета аэропорта <span>Я</span>ндекс</h1>
+        <h2>Задание #<span>1</span></h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Название авиакомпании</th>
+                    <th>Логотип авиакомпании</th>
+                    <th>Номер рейса</th>
+                    <th>Модель самолета</th>
+                    <th>Пункт назначения</th>
+                    <th>Плановое время вылета</th>
+                    <th>Фактическое время вылета</th>
+                    <th>Статус рейса</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ООО «Авиа-Сибирь»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9811</td>
+                    <td>ТУ-144</td>
+                    <td>Москва</td>
+                    <td>29 сен 19:00</td>
+                    <td>29 сен 19:00</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиакомпания «Северо-Запад»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9812</td>
+                    <td>ТУ-154</td>
+                    <td>Санкт-Петербург</td>
+                    <td>29 сен 19:10</td>
+                    <td>29 сен 19:15</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиалифт ДВ»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9813</td>
+                    <td>АНТ-2</td>
+                    <td>Надым</td>
+                    <td>29 сен 19:20</td>
+                    <td>29 сен 19:20</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиасервис»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 98113</td>
+                    <td>ТУ-124</td>
+                    <td>Тюмень</td>
+                    <td>29 сен 19:30</td>
+                    <td>29 сен 19:33</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиа-Сибирь»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9814</td>
+                    <td>ТУ-144</td>
+                    <td>Ростов-на-Дону</td>
+                    <td>29 сен 19:40</td>
+                    <td>29 сен 19:44</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиакомпания «Северо-Запад»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9815</td>
+                    <td>ТУ-154</td>
+                    <td>Новосибирск</td>
+                    <td>29 сен 19:50</td>
+                    <td>29 сен 19:50</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиалифт ДВ»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9816</td>
+                    <td>АНТ-2</td>
+                    <td>Урегной</td>
+                    <td>29 сен 20:00</td>
+                    <td>29 сен 20:00</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиасервис»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 98117</td>
+                    <td>ТУ-124</td>
+                    <td>Киев</td>
+                    <td>29 сен 20:10</td>
+                    <td>29 сен 20:20</td>
+                    <td>В ожидании</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Задание #<span>2</span></h2>
+        <table id="cross">
+            <thead>
+                <tr>
+                    <th>Название авиакомпании</th>
+                    <th>Логотип авиакомпании</th>
+                    <th>Номер рейса</th>
+                    <th>Модель самолета</th>
+                    <th>Пункт назначения</th>
+                    <th>Плановое время вылета</th>
+                    <th>Фактическое время вылета</th>
+                    <th>Статус рейса</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ООО «Авиа-Сибирь»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9811</td>
+                    <td>ТУ-144</td>
+                    <td>Москва</td>
+                    <td>29 сен 19:00</td>
+                    <td>29 сен 19:00</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиакомпания «Северо-Запад»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9812</td>
+                    <td>ТУ-154</td>
+                    <td>Санкт-Петербург</td>
+                    <td>29 сен 19:10</td>
+                    <td>29 сен 19:15</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиалифт ДВ»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9813</td>
+                    <td>АНТ-2</td>
+                    <td>Надым</td>
+                    <td>29 сен 19:20</td>
+                    <td>29 сен 19:20</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиасервис»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 98113</td>
+                    <td>ТУ-124</td>
+                    <td>Тюмень</td>
+                    <td>29 сен 19:30</td>
+                    <td>29 сен 19:33</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиа-Сибирь»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9814</td>
+                    <td>ТУ-144</td>
+                    <td>Ростов-на-Дону</td>
+                    <td>29 сен 19:40</td>
+                    <td>29 сен 19:44</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиакомпания «Северо-Запад»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9815</td>
+                    <td>ТУ-154</td>
+                    <td>Новосибирск</td>
+                    <td>29 сен 19:50</td>
+                    <td>29 сен 19:50</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиалифт ДВ»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 9816</td>
+                    <td>АНТ-2</td>
+                    <td>Урегной</td>
+                    <td>29 сен 20:00</td>
+                    <td>29 сен 20:00</td>
+                    <td>В ожидании</td>
+                </tr>
+                <tr>
+                    <td>ООО «Авиасервис»</td>
+                    <td><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></td>
+                    <td>7K 98117</td>
+                    <td>ТУ-124</td>
+                    <td>Киев</td>
+                    <td>29 сен 20:10</td>
+                    <td>29 сен 20:20</td>
+                    <td>В ожидании</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Задание #<span>3</span></h2>
+        <table id="crosshover">
+            <thead>
+                <tr>
+                    <th><div>Название авиакомпании</div></th>
+                    <th><div>Логотип авиакомпании</div></th>
+                    <th><div>Номер рейса</div></th>
+                    <th><div>Модель самолета</div></th>
+                    <th><div>Пункт назначения</div></th>
+                    <th><div>Плановое время вылета</div></th>
+                    <th><div>Фактическое время вылета</div></th>
+                    <th><div>Статус рейса</div></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><div>ООО «Авиа-Сибирь»</div></td>
+                    <td><div><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></div></td>
+                    <td><div>7K 9811</div></td>
+                    <td><div>ТУ-144</div></td>
+                    <td><div>Москва</div></td>
+                    <td><div>29 сен 19:00</div></td>
+                    <td><div>29 сен 19:00</div></td>
+                    <td><div>В ожидании</div></td>
+                </tr>
+                <tr>
+                    <td><div>ООО «Авиакомпания «Северо-Запад»</div></td>
+                    <td><div><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></div></td>
+                    <td><div>7K 9812</div></td>
+                    <td><div>ТУ-154</div></td>
+                    <td><div>Санкт-Петербург</div></td>
+                    <td><div>29 сен 19:10</div></td>
+                    <td><div>29 сен 19:15</div></td>
+                    <td><div>В ожидании</div></td>
+                </tr>
+                <tr>
+                    <td><div>ООО «Авиалифт ДВ»</div></td>
+                    <td><div><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></div></td>
+                    <td><div>7K 9813</div></td>
+                    <td><div>АНТ-2</div></td>
+                    <td><div>Надым</div></td>
+                    <td><div>29 сен 19:20</div></td>
+                    <td><div>29 сен 19:20</div></td>
+                    <td><div>В ожидании</div></td>
+                </tr>
+                <tr>
+                    <td><div>ООО «Авиасервис»</div></td>
+                    <td><div><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></div></td>
+                    <td><div>7K 98113</div></td>
+                    <td><div>ТУ-124</div></td>
+                    <td><div>Тюмень</div></td>
+                    <td><div>29 сен 19:30</div></td>
+                    <td><div>29 сен 19:33</div></td>
+                    <td><div>В ожидании</div></td>
+                </tr>
+                <tr>
+                    <td><div>ООО «Авиа-Сибирь»</div></td>
+                    <td><div><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></div></td>
+                    <td><div>7K 9814</div></td>
+                    <td><div>ТУ-144</div></td>
+                    <td><div>Ростов-на-Дону</div></td>
+                    <td><div>29 сен 19:40</div></td>
+                    <td><div>29 сен 19:44</div></td>
+                    <td><div>В ожидании</div></td>
+                </tr>
+                <tr>
+                    <td><div>ООО «Авиакомпания «Северо-Запад»</div></td>
+                    <td><div><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></div></td>
+                    <td><div>7K 9815</div></td>
+                    <td><div>ТУ-154</div></td>
+                    <td><div>Новосибирск</div></td>
+                    <td><div>29 сен 19:50</div></td>
+                    <td><div>29 сен 19:50</div></td>
+                    <td><div>В ожидании</div></td>
+                </tr>
+                <tr>
+                    <td><div>ООО «Авиалифт ДВ»</div></td>
+                    <td><div><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></div></td>
+                    <td><div>7K 9816</div></td>
+                    <td><div>АНТ-2</div></td>
+                    <td><div>Урегной</div></td>
+                    <td><div>29 сен 20:00</div></td>
+                    <td><div>29 сен 20:00</div></td>
+                    <td><div>В ожидании</div></td>
+                </tr>
+                <tr>
+                    <td><div>ООО «Авиасервис»</div></td>
+                    <td><div><img src="images/default_logo.png" alt="Логотип авиакомпании" width="24" height="23"></div></td>
+                    <td><div>7K 98117</div></td>
+                    <td><div>ТУ-124</div></td>
+                    <td><div>Киев</div></td>
+                    <td><div>29 сен 20:10</div></td>
+                    <td><div>29 сен 20:20</div></td>
+                    <td><div>В ожидании</div></td>
+                </tr>
+            </tbody>
+        </table>
+    </body>
 </html>
